package com.g13.controller.arena.commands;

public class DoNothing implements Command{
    @Override
    public void execute() {}
}
